test fix for BagIcon not showing full height

--- a/src/style/Header.scss
+++ b/src/style/Header.scss
@@ -12,7 +12,7 @@
 }
 
 .Header__actions {
-  height: auto;
+  position: relative;
 }
 
 .Header__logo {
